--- a/Connections/index.html
+++ b/Connections/index.html
@@ -16,6 +16,7 @@
         a {
             display: block;
             font-size: 35px;
+            text-decoration: none;
         }
         
     </style>
@@ -33,11 +34,11 @@
 <body>
     <h1 style="text-align: center;">My Connections/Accounts!</h1>
 <hr>
-<button><a href="https://scratch.mit.edu/users/ItzTiger6000" style="color: #F1A521;">Scratch</a></button>
+<button style="background-color: #F8AA36; border: 2px solid #bd8128; border-radius: 3px;"><a href="https://scratch.mit.edu/users/ItzTiger6000" style="color: white">Scratch</a></button>
 <hr>
-<button><a href="https://www.roblox.com/users/4328618920/profile" style="color: #90A0AF;">Roblox</a></button>
+<button style="background-color: #90A0AF; border: 2px solid #393B3D; border-radius: 3px;"><a href="https://www.roblox.com/users/4328618920/profile" style="color: white">Roblox</a></button>
 <hr>
-<button><a href="https://modrinth.com/user/ItzTiger" style="color: #1BD96B;">Modrinth</a></button>
+<button style="background-color: #00AF5C; border: 2px solid #00914d; border-radius: 3px;"><a href="https://modrinth.com/user/ItzTiger" style="color: white">Modrinth</a></button>
 <hr>
-<button><a href="https://www.curseforge.com/members/itztiger/projects" style="color: #F25C2E;"> CurseForge</a></button>
+<button style="background-color: #F25C2E; border: 2px solid #cd4f28; border-radius: 3px;"><a href="https://www.curseforge.com/members/itztiger/projects" style="color: white"> CurseForge</a></button>
 <hr>
