--- a/Projects/Datapacks/index.html
+++ b/Projects/Datapacks/index.html
@@ -35,6 +35,10 @@
             background-color: rgb(217, 217, 217);
             overflow: hidden;
           }
+
+          a {
+            text-decoration: none;
+          }
         </style>
         <!-- Embed Title -->
     <meta property="og:title" content="Tiger's Datapacks!">
