--- a/Projects/index.html
+++ b/Projects/index.html
@@ -17,11 +17,15 @@
         body {
             font-family: sans-serif;
         }
+
+        a {
+            text-decoration: none;
+        }
     </style>
 </head>
 
 <body>
-<h1>My Projects</h1>
+<h1 style="text-align: center;">My Projects</h1>
 <hr>
     <h1 style="text-align: center;"><a href="https://itztiger.github.io/Projects/Datapacks" style="color: #6BC349;">Minecraft <span style="color: #AC7A54"> Datapacks</span></a></h1>
     <hr>
