--- a/Projects/Scratch_Games/index.html
+++ b/Projects/Scratch_Games/index.html
@@ -34,6 +34,10 @@
           background-color: rgb(217, 217, 217);
           overflow: hidden;
         }
+
+        a {
+            text-decoration: none;
+        }
       </style>
       <!-- Embed Title -->
   <meta property="og:title" content="Tiger's Scratch Games!">
